# lemy

./: .dockerignore  .env.example  .gitignore  LICENCE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compose.postgres.yaml  compose.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-landing.yml
apps/cloud/: .dev.vars.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.test.jsonc
apps/cloud/migrations/: 0001_initial.sql  0002_external_mcps.sql  0003_credits.sql  0004_llm_cost_billing.sql  0005_usage_reservations.sql  0006_managed_provider_credentials.sql  0007_project_skills.sql  0008_stripe_reversals.sql  0009_agent_access_tokens.sql  (+9 more)
apps/play/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
examples/request-cycle-demo/: Dockerfile  nginx.conf  package.json  tsconfig.json
landing/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
landing/public/: CNAME
landing/src/: App.tsx  app.css  main.tsx
services/agent/: Dockerfile  pyproject.toml
services/agent/src/openapi_harness_agent/: __init__.py  api.py  auth.py  checkpointer.py  graph.py  main.py  model.py  settings.py
services/agent/tests/: test_api.py  test_auth.py  test_checkpointer.py  test_graph.py  test_model.py  test_settings.py
services/codemode/: Dockerfile  package.json  tsconfig.json  wrangler.jsonc
services/runtime/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
skills/: README.md
skills/manage-lemy/: SKILL.md
(+75 files in other folders)
