[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemy-agent"
version = "0.1.0"
description = "LangGraph AG-UI agent for Lemy"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
  "ag-ui-langgraph>=0.0.42,<0.1",
  "copilotkit>=0.1.94,<0.2",
  "fastapi>=0.139,<1",
  "langchain>=1.3.14,<2",
  "langchain-anthropic>=1.4,<2",
  "langchain-mcp-adapters>=0.3,<0.4",
  "langchain-openai>=1.1,<2",
  "langgraph>=1.2.9,<2",
  "langgraph-checkpoint-postgres>=3.1,<4",
  "psycopg[binary,pool]>=3.3,<4",
  "uvicorn[standard]>=0.41,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.15,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_harness_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
